fix team theme in dark mode

--- a/theming/theme-dark.scss
+++ b/theming/theme-dark.scss
@@ -79,6 +79,10 @@ a {
     }
 }
 
+.team-member, .input-group-text {
+    background-color: $background-nav !important;   
+}
+
 // Universal Box Styling for Dark Mode
 .box {
     background-color: $panel-bg !important;
